- Minor spacing correction for jam headers

--- a/template/css/site.css
+++ b/template/css/site.css
@@ -4,7 +4,8 @@ body{
 
 
 .jamHeader{
-	cursor: pointer;
+  cursor: pointer;
+  border-bottom: 0px;
 }
 
 .jamContent{
@@ -839,4 +840,8 @@ body{
 
 .jamHeaderPanel{
   margin-bottom: 0px;
+}
+
+.jamHeaderPanel{
+  border: 0px;
 }
